# zakar

./: .dockerignore  Dockerfile  Procfile  README.md  deployment-tasks.sh  heroku.yaml
zakar/: .eslintrc.js  .prettierrc.js
zakar-client/: .prettierrc.js  package.json
zakar-client/public/: index.html  manifest.json
zakar-client/src/: App.css  App.tsx  StateProvider.tsx  react-app-env.d.ts
zakar-client/src/components/ActivitiesBar/: ActivitiesBar.css  index.tsx
zakar-client/src/components/ActivityInstruction/: ActivityInstruction.css  index.tsx
zakar-client/src/components/BibleBooks/: BibleBooks.css  index.tsx
zakar-client/src/components/Doodle/: Doodle.css  index.tsx
zakar-client/src/components/LoginCTA/: LoginCTA.css  index.tsx
zakar-client/src/components/LoginModal/: LoginModal.css  index.tsx
zakar-client/src/components/Search/: Search.css  index.tsx
zakar-client/src/components/Verse/: Verse.css  index.tsx
zakar-client/src/hooks/: useVerse.tsx
zakar-client/src/pages/About/: About.css  index.tsx
zakar-client/src/pages/BookChapters/: BookChapters.css  index.tsx
zakar-client/src/pages/Dashboard/: Dashboard.css  index.tsx
zakar-client/src/pages/Global/: index.tsx
zakar-client/src/pages/Home/: Home.css  index.tsx
zakar-client/src/pages/LearningBoard/: LearningBoard.css  index.tsx
zakar-client/src/utils/: const.tsx  helpers.tsx
zakar/public/: index.html
zakar/src/: App.css  App.tsx  react-app-env.d.ts
zakar/src/utils/: const.tsx
zakar_server/: Cargo.toml
zakar_server/migrations/2020-09-02-051516_add_users/: up.sql
zakar_server/migrations/2020-09-13-091302_add_users/: up.sql
zakar_server/src/: auth.rs  errors.rs  main.rs  models.rs  proxy.rs  schema.rs  user_api.rs
(+44 files in other folders)
