[package]
name = "zakar_server"
version = "0.1.0"
authors = ["Hunter Lester <guilfordhunter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
actix-files = "0.2.2"
listenfd = "0.3"
actix-cors = "0.2.0"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }