[package]
name = "zakar_server"
version = "0.1.0"
authors = ["Hunter Lester <guilfordhunter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1.0"
actix-files = "0.2.2"
listenfd = "0.3"
actix-cors = "0.2.0"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"

chrono = { version = "0.4.10", features = ["serde"] }
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
derive_more = "0.99.2"
actix-web-httpauth = { git = "https://github.com/actix/actix-extras" }
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"